test/libsolidity/syntaxTests/types/var_empty_decl_3.sol
contract C {
    function f() public pure {
        var (d, e,);
    }
}
// ----
// TypeError: (52-63): Use of the "var" keyword is disallowed.
